fix: Spacing, backdrop color

--- a/src/aics-image-viewer/assets/styles/typography.css
+++ b/src/aics-image-viewer/assets/styles/typography.css
@@ -1,4 +1,6 @@
 #cell-viewer {
+  height: 100%;
+
   body {
     font-family: "Open Sans", "Overpass-Light", Arial, sans-serif;
   }
