--- a/src/aics-image-viewer/components/StyleProvider/styles.css
+++ b/src/aics-image-viewer/components/StyleProvider/styles.css
@@ -1,4 +1,7 @@
 .aics-image-viewer-style-provider {
+    width: 100%;
+    height: 100%;
+
     /* Color palette. COMPONENTS USING CSS VARIABLES SHOULD **NOT** ACCESS THESE DIRECTLY. */
     --palette-black: #000000;
     --palette-white: #ffffff;
@@ -74,7 +77,7 @@
     h2 {
         color: var(--color-text-header);
         font-size: 19px;
-        font-weight: 600;
+        font-weight: 400;
     }
 
     h3 {
@@ -99,5 +102,24 @@
          */
         background-color: var(--color-text-selection-bg);
         color: var(--color-text-selection-text);
+    }
+
+
+    /* TODO: Remove this when we upgrade to Ant versions that provide support for
+     * ConfigProvider. 
+     */
+    .ant-btn-primary {
+        background-color: var(--color-button-primary-bg);
+        color: var(--color-button-primary-text);
+        border-color: var(--color-button-primary-bg);
+    }
+
+    .ant-btn:hover {
+        background-color: var(--color-button-primary-hover-bg);
+        border-color: var(--color-button-primary-hover-bg);
+    }
+
+    .ant-btn:active {
+        border: 1px solid var(--color-button-primary-active-outline);
     }
 }
